style to button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Project Starter</h1>
+    <a href="">Button</a>
   </body>
 </html>
